<!-- Shreyas Nagarajappa 2016, The Australian National University -->
<resources>
    <string name="app_name">SoftPaper</string>
    <string name="login_welcomeText">Good</string>
    <string name="login_loginPrompt">Login to get started</string>
    <string name="login_loginInfo">If this is your first time here, enter a passphrase and click LOGIN to set your login credentials.</string>
    <string name="login_loginButton">Login</string>
    <string name="login_textPassword">password</string>
    <string name="title_activity_view_notes">Saved Items</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_new_note">New Note</string>
    <string name="title_activity_new_list">New List</string>
    <string name="title_activity_about">About</string>
    <string name="newNote_title">Title</string>
    <string name="newNote_note">Touch here to type</string>
    <string name="about_about">About SoftPaper</string>
    <string name="about_info">
        SoftPaper is an android application to save notes and check lists.
        \n\nCOMP2100 Assignment 1 2016.
        \n\nShreyas Nagarajappa, The Australian National University.
        \n\nAll rights reserved.
    </string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
</resources>
