<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ViewNotesActivity">
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit_note"
        android:icon="@drawable/ic_action_edit_white_48dp"
        android:title="@string/action_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete_note"
        android:icon="@drawable/ic_delete_white_48dp"
        android:title="@string/action_delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_edit_list"
        android:icon="@drawable/ic_action_edit_white_48dp"
        android:title="@string/action_edit"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_delete_list"
        android:icon="@drawable/ic_delete_white_48dp"
        android:title="@string/action_delete"
        app:showAsAction="always"/>

</menu>
